--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,24 @@
 /.minecraft/journeymap/data
 .minecraft/journeymap/journeymap.log
 /.minecraft/logs
-/.minecraft/logs
-/.minecraft/logs
 /.minecraft/saves
 instance.cfg
 .minecraft/usercache.json
 .minecraft/options.txt
-.minecraft/options.txt
-/.minecraft/logs
-/.minecraft
 .minecraft/logs/onslaught.log.0
 .minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
-.minecraft/options.txt
 .minecraft/logs/onslaught.log.0
-/.minecraft/logs
 .minecraft/logs/onslaught.log.1
 .minecraft/logs/onslaught.log.2
 .minecraft/logs/onslaught.log.3
 .minecraft/logs/onslaught.log.4
+instance.cfg
+/natives
+.minecraft/llibrary/debug/net.minecraftforge.client.ForgeHooksClient.class
+.minecraft/llibrary/debug/net.minecraft.client.renderer.RenderGlobal.class
+.minecraft/llibrary/debug/net.minecraft.client.renderer.EntityRenderer.class
+.minecraft/llibrary/debug/net.minecraft.client.model.ModelBiped.class
+.minecraft/config/splash.properties
+.minecraft/logs/debug.log
+.minecraft/logs/latest.log
+instance.cfg
