Blood and Plastic
Did some quest locals

Re-added Blood Magic

Added Depot worker which fixes some hefty railcraft bugs

Added recipes to turn oil into plastic and recipe for Techguns Plastic

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ instance.cfg
 .minecraft/crafttweaker.log
 .minecraft/journeymap/journeymap.log
 .minecraft/config/startuptimer/startup_times.json
+/.minecraft/crash-reports
