--- a/.minecraft/config/Guide-API/Guide-API.cfg
+++ b/.minecraft/config/Guide-API/Guide-API.cfg
@@ -19,7 +19,9 @@ books {
     ##########################################################################################################
 
     spawn {
+        #  [default: false]
         B:"bloodmagic:guide"=false
+        B:"minecraft:mffsguide"=false
     }
 
 }
