--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -24,7 +24,7 @@ world-78688046 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=axe
+    S:filterText=sulfur
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -122,6 +122,16 @@ world184824965 {
     S:defaultFluidContainerItem=
     B:editEnabled=false
     S:filterText=armor stand
+    B:overlayEnabled=true
+}
+
+
+world1855637915 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=@extrapl
     B:overlayEnabled=true
 }
 
