--- a/.minecraft/config/rftools/rftools.cfg
+++ b/.minecraft/config/rftools/rftools.cfg
@@ -372,14 +372,10 @@ environmental {
 general {
     # Oregen for dimensional shards in case RFTools Dimensions is present [default: [-1], [1]]
     S:dimensionalShardOregenWithDimensions <
-        -1
-        1
      >
 
     # Oregen for dimensional shards in case RFTools Dimensions is not present [default: [-1], [1]]
     S:dimensionalShardOregenWithoutDimensions <
-        -1
-        1
      >
 
     # Craftability of dimensional shards if RFTools Dimension is present: 0=not, 1=easy, 2=hard [range: 0 ~ 2, default: 0]
@@ -1343,7 +1339,7 @@ mobspawnrf {
 
 networkmonitor {
     # Whether the network monitor should exist [default: true]
-    B:enabled=true
+    B:enabled=false
 
     # Time (in seconds) to hilight a block in the world [range: 0 ~ 2147483647, default: 5]
     I:hilightTime=5
