--- a/.minecraft/config/Galacticraft/core.cfg
+++ b/.minecraft/config/Galacticraft/core.cfg
@@ -118,7 +118,7 @@ difficulty {
     D:"Meteor Spawn Modifier"=1.0
 
     # Set to false to stop meteors from breaking blocks on contact.
-    B:"Meteor Block Damage Enabled"=false
+    B:"Meteor Block Damage Enabled"=true
 }
 
 
