--- a/.minecraft/config/icbmclassic/launcher.cfg
+++ b/.minecraft/config/icbmclassic/launcher.cfg
@@ -7,6 +7,9 @@ general {
     # Inaccuracy offset to apply by default (meters)
     D:min_inaccuracy_range=2.0
 
+    # Size of the energy buffer
+    I:power_capacity=1200
+
     # Energy consumed per launcher
     I:power_per_launch=1200
 
@@ -15,8 +18,6 @@ general {
 
     # Inaccuracy offset to apply based on range (meters) with max range being full value. In addition to min inaccuracy already applied.
     D:scaled_inaccuracy_range=10.0
-
-    # Size of the energy buffer
     I:tpower_capacity=1200
 }
 
