--- a/instance.cfg
+++ b/instance.cfg
@@ -1,3 +1,4 @@
+AutoCloseConsole=false
 ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
@@ -8,8 +9,11 @@ JavaVersion=1.8.0_411
 JoinServerOnLaunch=true
 JoinServerOnLaunchAddress=
 JoinSingleplayerWorldOnLaunch=false
+JoinSingleplayerWorldOnLaunchName=
 JoinWorldOnLaunch=false
+JvmArgs=
 LWJGLVersion=
+LaunchMaximized=false
 LiteloaderVersion=
 LogPrePostOutput=true
 MCLaunchMethod=LauncherPart
@@ -19,18 +23,33 @@ ManagedPackName=
 ManagedPackType=
 ManagedPackVersionID=
 ManagedPackVersionName=
+MaxMemAlloc=32000
+MinMemAlloc=8192
+MinecraftWinHeight=480
+MinecraftWinWidth=854
 OverrideCommands=false
 OverrideConsole=false
 OverrideGameTime=false
+OverrideJava=false
 OverrideJavaArgs=false
 OverrideJavaLocation=true
 OverrideMCLaunchMethod=false
 OverrideMemory=false
 OverrideNativeWorkarounds=false
 OverrideWindow=false
+PermGen=128
+PostExitCommand=
+PreLaunchCommand=
+RecordGameTime=true
+ShowConsole=false
+ShowConsoleOnError=true
+ShowGameTime=true
+UseNativeGLFW=false
+UseNativeOpenAL=false
+WrapperCommand=
 iconKey=chicken
-lastLaunchTime=1728268960162
-lastTimePlayed=12759
+lastLaunchTime=1729364957125
+lastTimePlayed=816
 name=TobyTech
 notes=
-totalTimePlayed=1925948
+totalTimePlayed=1937264
