--- a/.minecraft/config/MoCreatures/MoCSettings.cfg
+++ b/.minecraft/config/MoCreatures/MoCSettings.cfg
@@ -5,8 +5,20 @@
 ####################
 
 global-settings {
+    # Displays a GUI to name a pet when taming.
+    B:AlwaysNamePets=true
+
     # Enables animated textures.
     B:AnimateTextures=true
+
+    # Applies potion effects when wearing full scorpion armor sets.
+    B:ArmorSetEffects=true
+
+    # Adds recipes to craft all vanilla horse armor.
+    B:CraftableHorseArmor=true
+
+    # Adds a recipe to craft saddles.
+    B:CraftableSaddles=true
 
     # Turns on verbose logging.
     B:Debug=false
@@ -20,11 +32,18 @@ global-settings {
     # Shows the name of pets.
     B:DisplayPetName=true
 
-    # Forces despawning on all creatures including vanilla for a more dynamic experience while exploring the world. If false, all passive MoCreatures will not despawn to prevent other creatures from taking over. Note: if you experience issues with farm animals despawning, adjust despawn light levels. If CMS is installed, this setting must remain true if you want MoCreatures to despawn.
+    # Enables extra fog at the wyvern lair like in legacy versions.
+    B:FoggyWyvernLair=false
     B:ForceDespawns=false
+
+    # Enables legacy wyvern lair sky.
+    B:LegacyWyvernLairSky=false
 
     # The density of MoCreatures particle effects.
     I:ParticleFX=3
+
+    # Applies potion effects when dealing damage with scorpion weapons.
+    B:WeaponEffects=true
 }
 
 
@@ -33,20 +52,22 @@ global-settings {
 ####################
 
 creature-general-settings {
+    # Enables different eye colors for wraiths and flame wraiths like in alpha versions.
+    B:AlphaWraithEyes=false
+
     # Allows creatures to attack horses.
     B:AttackHorses=false
 
     # Allows creatures to attack wolves.
     B:AttackWolves=false
-
-    # The maximum light level threshold used to determine whether or not to despawn a farm animal when ForceDespawns is enabled. Note: Configure this value in CMS if it is installed.
     I:DespawnMaxLightLevel=7
-
-    # The minimum light level threshold used to determine whether or not to despawn a farm animal when ForceDespawns is enabled. Note: Configure this value in CMS if it is installed.
     I:DespawnMinLightLevel=2
 
     # Destroys animal drops when not killed by a player.
     B:DestroyDrops=false
+
+    # Not for the more serious lore friendly players.
+    B:EasterEggs=true
 
     # Guarantees a new horse mix on every breed.
     B:EasyHorseBreeding=false
@@ -57,8 +78,44 @@ creature-general-settings {
     # Allows creatures to attack other creatures. Not recommended if despawning is off.
     B:EnableHunters=true
 
+    # The percentage for filch lizards to spawn with an item.
+    I:FilchLizardSpawnItemChance=25
+
     # The percentage for kitties spawning in village chunks.
     I:KittyVillageChance=15
+
+    # Enables simple big cat models and textures like in legacy versions.
+    B:LegacyBigCatModels=false
+
+    # Enables legacy big golem sounds.
+    B:LegacyBigGolemSounds=false
+
+    # Enables simple bunny textures like in legacy versions.
+    B:LegacyBunnyTextures=false
+
+    # Enables legacy duck sounds.
+    B:LegacyDuckSounds=false
+
+    # Enables generic hurt sounds rather than hissing for the filch lizards.
+    B:LegacyFilchLizardSounds=false
+
+    # Enables legacy mini golem sounds.
+    B:LegacyMiniGolemSounds=false
+
+    # Enables legacy rat death sound.
+    B:LegacyRatDeathSound=false
+
+    # Enables the simple shark model and texture like in legacy versions.
+    B:LegacySharkModel=false
+
+    # Enables legacy human werewolf sounds.
+    B:LegacyWerehumanSounds=false
+
+    # Enables legacy wraith sounds.
+    B:LegacyWraithSounds=false
+
+    # The percentage for mother scorpions to drop an egg.
+    I:MotherScorpionEggDropChance=33
 
     # The percentage for mother wyverns to drop an egg.
     I:MotherWyvernEggDropChance=66
@@ -66,8 +123,11 @@ creature-general-settings {
     # The percentage for ostriches to drop an egg.
     I:OstrichEggDropChance=3
 
-    # The percentage for horses, ostriches, scorpions etc. to drop a rare item such as a heart of darkness, unicorn, bone when killed.
+    # The percentage for certain creatures to drop a rare item when killed. Most creatures use loot tables and can be configured with a loot table editor instead.
     I:RareItemDropChance=25
+
+    # The percentage for scorpions to drop an egg.
+    I:ScorpionEggDropChance=17
 
     # Multiplier for entity spawns during world generation.
     D:SpawnMultiplier=2.0
@@ -78,10 +138,17 @@ creature-general-settings {
     # Makes the kitty litter box not pushable.
     B:StaticLitter=true
 
+    # Enables detailed names for creatures, describing their species.
+    B:VerboseEntityNames=false
+
+    # Enables custom creature spawning during world generation. Increases the presence of regular creatures.
+    B:WorldGenSpawningCreatures=false
+
+    # Enables custom water creature spawning during world generation. Increases the presence of water creatures.
+    B:WorldGenSpawningWaterCreatures=false
+
     # The percentage for wyverns to drop an egg.
     I:WyvernEggDropChance=33
-
-    # The percentage for spawning a zebra.
     I:ZebraChance=10
 }
 
@@ -93,8 +160,6 @@ creature-general-settings {
 ownership-settings {
     # Assigns the player as the owner for each creature they tame. Only the owner can interact with the tamed creature.
     B:EnableOwnership=false
-
-    # Allows players to remove a tamed creature's owner, essentially untaming it.
     B:EnableResetOwnerScroll=false
 
     # Maximum tamed creatures an OP can have. Requires EnableOwnership to be enabled.
