--- a/.minecraft/config/MoCreatures/MoCreatures.cfg
+++ b/.minecraft/config/MoCreatures/MoCreatures.cfg
@@ -1083,3 +1083,183 @@ roach {
 }
 
 
+####################
+# filchlizard
+####################
+
+filchlizard {
+    S:biomeTypes=[SAVANNA, SANDY, MESA, WYVERN_LAIR]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=6
+    I:maxSpawn=2
+    I:minSpawn=1
+}
+
+
+####################
+# cavescorpion
+####################
+
+cavescorpion {
+    S:biomeTypes=[SANDY, SNOWY, MESA, DRY, HOT, DEAD, SPOOKY]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=4
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# dirtscorpion
+####################
+
+dirtscorpion {
+    S:biomeTypes=[SANDY, MESA, DRY, HOT]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=6
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# firescorpion
+####################
+
+firescorpion {
+    S:biomeTypes=[NETHER]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[-1]
+    I:frequency=6
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# frostscorpion
+####################
+
+frostscorpion {
+    S:biomeTypes=[SNOWY]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=6
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# undeadscorpion
+####################
+
+undeadscorpion {
+    S:biomeTypes=[DEAD, SPOOKY]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=6
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# darkmanticore
+####################
+
+darkmanticore {
+    S:biomeTypes=[SANDY, MOUNTAIN, PLAINS, SNOWY, DEAD, SPOOKY]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=5
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# firemanticore
+####################
+
+firemanticore {
+    S:biomeTypes=[NETHER]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[-1]
+    I:frequency=8
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# frostmanticore
+####################
+
+frostmanticore {
+    S:biomeTypes=[SNOWY]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=8
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# plainmanticore
+####################
+
+plainmanticore {
+    S:biomeTypes=[SANDY, MOUNTAIN, PLAINS]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=8
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# toxicmanticore
+####################
+
+toxicmanticore {
+    S:biomeTypes=[DEAD, SPOOKY]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=8
+    I:maxSpawn=3
+    I:minSpawn=1
+}
+
+
+####################
+# grasshopper
+####################
+
+grasshopper {
+    S:biomeTypes=[FOREST, JUNGLE, PLAINS, SAVANNA, WYVERN_LAIR]
+    S:blockedBiomeTypes=[]
+    B:canSpawn=true
+    S:dimensions=[0]
+    I:frequency=10
+    I:maxSpawn=2
+    I:minSpawn=1
+}
+
+
