--- a/.minecraft/config/ebwizardry/ebwizardry.cfg
+++ b/.minecraft/config/ebwizardry/ebwizardry.cfg
@@ -281,7 +281,13 @@ artefacts {
     B:"spellbundle:charm_frozen_lock"=true
 
     # Set to false to disable this item
+    B:"spellbundle:charm_portals"=true
+
+    # Set to false to disable this item
     B:"spellbundle:charm_spectral_hammer"=true
+
+    # Set to false to disable this item
+    B:"spellbundle:charm_spirit_guide"=true
 
     # Set to false to disable this item
     B:"spellbundle:charm_wishing_well"=true
@@ -335,6 +341,18 @@ artefacts {
     B:"wizardrynextgeneration:amulet_moon"=true
 
     # Set to false to disable this item
+    B:"wizardrynextgeneration:belt_potion"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:body_artemis"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:body_hashashin"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:charm_bloodstone"=true
+
+    # Set to false to disable this item
     B:"wizardrynextgeneration:charm_dice"=true
 
     # Set to false to disable this item
@@ -344,13 +362,43 @@ artefacts {
     B:"wizardrynextgeneration:charm_lingering"=true
 
     # Set to false to disable this item
+    B:"wizardrynextgeneration:charm_pyramid"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:charm_yang"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:charm_yin"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:charm_yin_yang"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:head_hashashin"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:head_ra"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:head_raijin"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:head_thorns"=true
+
+    # Set to false to disable this item
     B:"wizardrynextgeneration:ring_9th_circle"=true
 
     # Set to false to disable this item
     B:"wizardrynextgeneration:ring_anodized"=true
 
     # Set to false to disable this item
+    B:"wizardrynextgeneration:ring_looting"=true
+
+    # Set to false to disable this item
     B:"wizardrynextgeneration:ring_nullification"=true
+
+    # Set to false to disable this item
+    B:"wizardrynextgeneration:ring_rainbow"=true
 
     # Set to false to disable this item
     B:"wizardrynextgeneration:ring_static_shock"=true
@@ -540,6 +588,15 @@ gameplay {
     # Whether spells cast by dispensers can destroy blocks in the world. Wizardry makes every attempt to respect protection mods and plugins, but cannot guarantee it will work in all cases for every mod. If you need absolutely watertight anti-grief, disable this setting.
     B:dispenserBlockDamage=true
 
+    # Whether damage should be registered with the old system (wizardry_magic/indirect_wizardry_magic) prefixed damage with the elements like necromancy_indirect_wizardry_magic, necromancy_wizardry_magic. This is disabled by default to not break existing modpacks.The intention of this setting is to allow differentiating various damage types for e.g. the Distinct Damage Descriptions mod
+    B:damageTypePerElement=false
+
+    # Whether spell books are consumed when they are bound to a wand.
+    B:singleUseSpellBooks=false
+
+    # Whether to prevent binding the same spell to a wand multiple times
+    B:preventBindingSameSpellTwiceToWands=false
+
     # Whether to allow players to move other players around using magic.
     B:playersMoveEachOther=true
 
@@ -560,6 +617,9 @@ gameplay {
 
     # Whether using bonemeal on grass blocks has a chance to grow crystal flowers.
     B:bonemealGrowsCrystalFlowers=true
+
+    # Whether wands only decrement their cooldowns if a player holds them.
+    B:wandsMustBeHeldToDecrementCooldown=false
 }
 
 
@@ -1356,7 +1416,13 @@ spells {
     B:"spellbundle:arcane_reach"=true
 
     # Set to false to disable this spell
+    B:"spellbundle:ashen_soul"=true
+
+    # Set to false to disable this spell
     B:"spellbundle:bless_item"=true
+
+    # Set to false to disable this spell
+    B:"spellbundle:briarburst"=true
 
     # Set to false to disable this spell
     B:"spellbundle:colorize"=true
@@ -1368,10 +1434,16 @@ spells {
     B:"spellbundle:conjure_wraith"=true
 
     # Set to false to disable this spell
+    B:"spellbundle:convulsive_curse"=true
+
+    # Set to false to disable this spell
     B:"spellbundle:curse_of_evil"=true
 
     # Set to false to disable this spell
     B:"spellbundle:curse_of_haunting"=true
+
+    # Set to false to disable this spell
+    B:"spellbundle:hot_spring"=true
 
     # Set to false to disable this spell
     B:"spellbundle:ice_chest"=true
@@ -1395,7 +1467,13 @@ spells {
     B:"spellbundle:summon_mimic"=true
 
     # Set to false to disable this spell
+    B:"spellbundle:twin_portals"=true
+
+    # Set to false to disable this spell
     B:"spellbundle:warp"=true
+
+    # Set to false to disable this spell
+    B:"spellbundle:wasp_swarm"=true
 
     # Set to false to disable this spell
     B:"spellbundle:weaken_equipment"=true
@@ -1503,6 +1581,9 @@ spells {
     B:"wizardrynextgeneration:accelerated_mass"=true
 
     # Set to false to disable this spell
+    B:"wizardrynextgeneration:animal_allegiance"=true
+
+    # Set to false to disable this spell
     B:"wizardrynextgeneration:anti_gravitational_field"=true
 
     # Set to false to disable this spell
@@ -1566,6 +1647,9 @@ spells {
     B:"wizardrynextgeneration:equality"=true
 
     # Set to false to disable this spell
+    B:"wizardrynextgeneration:eye_for_an_eye"=true
+
+    # Set to false to disable this spell
     B:"wizardrynextgeneration:fission_blast"=true
 
     # Set to false to disable this spell
@@ -1614,6 +1698,9 @@ spells {
     B:"wizardrynextgeneration:justice"=true
 
     # Set to false to disable this spell
+    B:"wizardrynextgeneration:lightning_reflexes"=true
+
+    # Set to false to disable this spell
     B:"wizardrynextgeneration:lunar_salve"=true
 
     # Set to false to disable this spell
@@ -1642,6 +1729,9 @@ spells {
 
     # Set to false to disable this spell
     B:"wizardrynextgeneration:pull"=true
+
+    # Set to false to disable this spell
+    B:"wizardrynextgeneration:retribution"=true
 
     # Set to false to disable this spell
     B:"wizardrynextgeneration:righteous_defense"=true
@@ -1689,7 +1779,13 @@ spells {
     B:"wizardrynextgeneration:summon_righteous_defender"=true
 
     # Set to false to disable this spell
+    B:"wizardrynextgeneration:summon_vampire_bat"=true
+
+    # Set to false to disable this spell
     B:"wizardrynextgeneration:summon_webspitter"=true
+
+    # Set to false to disable this spell
+    B:"wizardrynextgeneration:tan_flesh"=true
 
     # Set to false to disable this spell
     B:"wizardrynextgeneration:tase"=true
@@ -1806,6 +1902,24 @@ tweaks {
         gold_ingot 3
         emerald 6
      >
+
+    # The fraction by which cooldowns are reduced for each level of cooldown upgrade.
+    D:cooldown_reduction_per_level=0.15
+
+    # The fraction by which potency is increased for each tier of matching wand. May cause extreme lag with high values!
+    D:potency_increase_per_tier=0.15
+
+    # The fraction by which spell duration is increased for each level of duration upgrade.
+    D:duration_increase_per_level=0.25
+
+    # The fraction by which spell range is increased for each level of range upgrade. May cause extreme lag with high values!
+    D:range_increase_per_level=0.25
+
+    # The fraction by which spell blast is increased for each level of blast upgrade. May cause extreme lag with high values!
+    D:blast_increase_per_level=0.25
+
+    # The fraction by which movement speed is reduced per level of frost effect.
+    D:frost_slowness_increase_per_level=0.5
 }
 
 
