Quests & Nether Ores
Added Ore Gen for overworld ores in the Nether and added Iron Ore to the End

Added words for a few quests

--- a/.minecraft/config/MoCreatures/MoCreatures.cfg
+++ b/.minecraft/config/MoCreatures/MoCreatures.cfg
@@ -970,7 +970,7 @@ butterfly {
 crab {
     S:biomeTypes=[BEACH, WATER]
     S:blockedBiomeTypes=[]
-    B:canSpawn=true
+    B:canSpawn=false
     S:dimensions=[0]
     I:frequency=11
     I:maxSpawn=2
