--- a/.minecraft/hei_bookmarks.ini
+++ b/.minecraft/hei_bookmarks.ini
@@ -40,3 +40,5 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"contenttweaker:compressed
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"nuclearcraft:fusion_core",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"nuclearcraft:fusion_electromagnet_idle",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{}},id:"spartanfire:halberd_fire_dragonsteel",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galaxyspace:assembly_machine",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"railcraft:track_outfitted",Count:1,tag:{railcraft:{rail:"railcraft_iron",kit:"railcraft_locking"}},Damage:0s}
