--- a/.minecraft/config/InvTweaks.cfg
+++ b/.minecraft/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Sat Nov 02 16:49:42 EDT 2024
+#Mon Nov 04 04:23:32 EST 2024
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
