--- a/.minecraft/config/Universal Tweaks - Bugfixes.cfg
+++ b/.minecraft/config/Universal Tweaks - Bugfixes.cfg
@@ -115,6 +115,10 @@ general {
         # Changes UUIDs of loaded entities in case their UUIDs are already assigned (and removes log spam)
         B:"Entity UUID"=true
 
+        # Fixes the player model occasionally disappearing when flying with elytra in a straight line in third-person mode
+        # Incompatible with OpenModsLib
+        B:"Fixes Invisible Player when Flying with Elytra"=true
+
         # Modifies falling logic of horses, listening to LivingFallEvent and taking jump boost into account
         B:"Horse Falling"=true
 
@@ -173,6 +177,7 @@ general {
         B:"Crafted Item Statistics"=true
 
         # Fixes entity and particle rendering issues by enabling depth buffer writing
+        # Can cause issues with modded particles
         B:"Depth Mask"=true
 
         # Replaces the help command, sorts and reports broken commands
@@ -196,17 +201,8 @@ general {
         B:"Spectator Menu"=true
 
         "model gap" {
-            # Fixes transparent gaps in all 3D models of blocks and items
             B:"[1] Model Gap Toggle"=true
-
-            # Quad X/Y offset
-            # Moves the quad toward the center of the item
-            # Use to hide gaps, keep as close to 0 as possible
             D:"[2] Recess Value"=0.007
-
-            # Quad expansion increment
-            # Enlarges each quad
-            # Use to hide gaps, keep as close to 0 as possible
             D:"[3] Expansion Value"=0.008
         }
 
