--- a/.minecraft/config/splash.properties
+++ b/.minecraft/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Sat Nov 02 16:47:00 EDT 2024
+#Mon Nov 04 04:20:51 EST 2024
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
