Bunch of Backports
Added Backports for:
Amethyst Geodes
Raids
Trial Chambers
Pretty much every block in 1.21 except those regarding Skulk and Bees
Nether Update
Bundles

Added 2 New Ocean PoI Mods
Added NetherEx which adds 4 Nether Biomes
Added Into The End

Buffed Nether Zinc Ore to make it more common

--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -24,7 +24,7 @@ world-78688046 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=endst
+    S:filterText=@techgun
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -36,7 +36,7 @@ world-91535244 {
     B:cheatItemsEnabled=true
     S:defaultFluidContainerItem=
     B:editEnabled=false
-    S:filterText=@oceanic
+    S:filterText=@deepe
     B:overlayEnabled=true
 }
 
@@ -127,11 +127,20 @@ world184824965 {
 
 
 world1855637915 {
+    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@extrapl
+    S:filterText=omin
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
