--- a/.minecraft/hei_bookmarks.ini
+++ b/.minecraft/hei_bookmarks.ini
@@ -26,7 +26,6 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconi
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_legs",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_chest",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_boots",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{}},id:"techguns:nucleardeathray",Count:1,tag:{ammo:40s,ammovariant:"default",camo:0b},Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{}},id:"galacticraftplanets:bucket_sludge",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galacticraftplanets:cavern_vines",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"techguns:itemshared",Count:1,Damage:84s}
@@ -42,3 +41,5 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"nuclearcraft:fusion_elect
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{}},id:"spartanfire:halberd_fire_dragonsteel",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galaxyspace:assembly_machine",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"railcraft:track_outfitted",Count:1,tag:{railcraft:{rail:"railcraft_iron",kit:"railcraft_locking"}},Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{}},id:"chisel:chisel_iron",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{AS_Amulet_HolderLeast:-7856832193709446652L,AS_Amulet_HolderMost:5100163605150778045L}},id:"techguns:pulserifle",Count:1,tag:{ammo:12s,ammovariant:"default",camo:0b},Damage:0s}
