Quest Links, Thaumcraft, & Goggles be gone
Changed Some config stuff so now quests can have links and images in them

Added Some Thaumcraft Addons

Removed Lag Goggles & Tickcentral as it will hopefully be unnecessary and seemed to decrease load time by like 20 seconds

Also removed configs for mods that have been removed

--- a/.minecraft/config/bqutweaker.cfg
+++ b/.minecraft/config/bqutweaker.cfg
@@ -9,14 +9,8 @@ general {
     ##########################################################################################################
 
     client {
-        B:"BQ Home Override"=true
-        B:"BQ Mobends Patch"=true
-        B:"BQ Notifications Button"=true
-        B:"BQ Party Create Override"=true
-        B:"BQ Party Manage Override"=true
-
         # Override BQ's Quest page?
-        B:"BQ Quest Override"=false
+        B:"BQ Quest Override"=true
 
         # Allow Quest Searching?
         B:"BQ Quest Searching"=true
