--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -24,7 +24,7 @@ world-78688046 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@deepb
+    S:filterText=crimso
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -127,20 +127,11 @@ world184824965 {
 
 
 world1855637915 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=nether gold
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
