Universal Tweaks Update
Updated Universal Tweaks and its dependencies

--- a/.minecraft/config/Universal Tweaks - Tweaks.cfg
+++ b/.minecraft/config/Universal Tweaks - Tweaks.cfg
@@ -83,7 +83,7 @@ general {
 
         "block dispenser" {
             # Allows dispensers to place blocks
-            B:"[1] Block Dispenser Toggle"=true
+            B:"[1] Block Dispenser Toggle"=false
 
             # List of blocks concerning dispensing
             # Behavior depends on the list mode
@@ -205,7 +205,7 @@ general {
         D:"Adaptive XP Drops"=0.0
 
         # Enables arms for armor stands by default
-        B:"Armed Armor Stands"=false
+        B:"Armed Armor Stands"=true
 
         # Replaces auto jump with an increased step height (singleplayer only)
         B:"Auto Jump Replacement"=true
