--- a/.minecraft/config/Unseens Nether Backport/world_config.cfg
+++ b/.minecraft/config/Unseens Nether Backport/world_config.cfg
@@ -60,7 +60,7 @@ general {
      >
 
     # When set to false, this will disable Ruined Portals from spawning in the Overworld
-    B:"Portal Ruins Overworld Enable/Disable"=true
+    B:"Portal Ruins Overworld Enable/Disable"=false
 
     # Change the rate that ruined portals in the overworld spawn at, lower means more frequent, higher means less (Block spacing > frequency)
     I:"Portal Ruins Overworld Spawn Rate"=1400
