--- a/.minecraft/config/raids/outposts.cfg
+++ b/.minecraft/config/raids/outposts.cfg
@@ -33,6 +33,31 @@ generation {
         minecraft:taiga
         minecraft:ice_flats
         minecraft:taiga_cold
+	thaumcraft:eerie
+	biomesoplenty:steppe
+	biomesoplenty:bayou
+	biomesoplenty:prairie
+	biomesoplenty:boreal_forest
+	biomesoplenty:brushland
+	biomesoplenty:cold_desert
+	biomesoplenty:coniferous_forest
+	biomesoplenty:snowy_coniferous_forest
+	biomesoplenty:dead_forest
+	biomesoplenty:dead_swamp
+	biomesoplenty:fen
+	biomesoplenty:grassland
+	biomesoplenty:grove
+	biomesoplenty:maple_woods
+	biomesoplenty:moor
+	biomesoplenty:marsh
+	biomesoplenty:ominous_woods
+	biomesoplenty:seasonal_forest
+	biomesoplenty:tundra
+	biomesoplenty:snowy_forest
+	biomesoplenty:snowy_tundra
+	biomesoplenty:shield
+	biomesoplenty:woodland
+	biomesoplenty:xeric_shrubland
      >
 }
 
