--- a/.minecraft/config/deeperdepths/world.cfg
+++ b/.minecraft/config/deeperdepths/world.cfg
@@ -1,31 +1,41 @@
 # Configuration file
 
 "copper ore" {
-    # Maximum Y level the block can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
+    # Which dimensions can the feature generate in?
+    I:dimensions <
+        0
+     >
+
+    # Maximum Y level the feature can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
     I:maxHeight=112
 
-    # Minimum Y level the block can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
+    # Minimum Y level the feature can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
     I:minHeight=0
 
     # Size of block generation to generate
     I:size=10
 
-    # Number of chances for the block to generate (Set to 0 to disable generation)
+    # Number of chances for the feature to generate (Set to 0 to disable generation)
     I:spawnChances=0
 }
 
 
 deepslate {
-    # Maximum Y level the block can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
+    # Which dimensions can the feature generate in?
+    I:dimensions <
+        0
+     >
+
+    # Maximum Y level the feature can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
     I:maxHeight=16
 
-    # Minimum Y level the block can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
+    # Minimum Y level the feature can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
     I:minHeight=0
 
     # Size of block generation to generate
     I:size=65
 
-    # Number of chances for the block to generate (Set to 0 to disable generation)
+    # Number of chances for the feature to generate (Set to 0 to disable generation)
     I:spawnChances=03
 }
 
@@ -45,16 +55,21 @@ trial_chambers {
 
 
 tuff {
-    # Maximum Y level the block can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
+    # Which dimensions can the feature generate in?
+    I:dimensions <
+        0
+     >
+
+    # Maximum Y level the feature can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
     I:maxHeight=16
 
-    # Minimum Y level the block can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
+    # Minimum Y level the feature can generate. (Setting below 0 or above 255 may cause issues if a world extension mod is not installed)
     I:minHeight=0
 
     # Size of block generation to generate
     I:size=33
 
-    # Number of chances for the block to generate (Set to 0 to disable generation)
+    # Number of chances for the feature to generate (Set to 0 to disable generation)
     I:spawnChances=1
 }
 
