--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -24,7 +24,7 @@ world-78688046 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=eleph
+    S:filterText=@deepmo
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -69,6 +69,16 @@ world157851660 {
 world1671941264 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1690200562 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
     S:defaultFluidContainerItem=
     B:editEnabled=false
     S:filterText=
@@ -131,7 +141,7 @@ world1855637915 {
     B:cheatItemsEnabled=true
     S:defaultFluidContainerItem=
     B:editEnabled=false
-    S:filterText=nether gold
+    S:filterText=bolt
     B:overlayEnabled=true
 }
 
