Descriptions & Oceanic Expanse Fixes
Added mods for Potion and Enchantment descriptions, they don't cover all but can hopefully be added to

Enabled Fish spawning as it turns out the mod that I was using removed it when OE is installed

Added drops for different OE mobs, will decide what crab meat I want to use tomorrow

Removed Dimensional Doors as it didn't serve too much purpose

Fixed DD copper blocks so they don't cause errors

--- a/.minecraft/config/oceanic_expanse.cfg
+++ b/.minecraft/config/oceanic_expanse.cfg
@@ -641,7 +641,7 @@ general {
 
         cod {
             # If Cod should be enabled
-            B:enableCod=false
+            B:enableCod=true
         }
 
         crab {
@@ -713,7 +713,7 @@ general {
 
         salmon {
             # If Slamon should be enabled
-            B:enableSalmon=false
+            B:enableSalmon=true
 
             # When using breeding items on Salmon, they grow in size. This is a joke feature.
             B:salmonFeedingGrowth=false
