--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@ instance.cfg
 .minecraft/config/AppliedEnergistics2/VersionChecker.cfg
 .minecraft/config/astralsorcery/amulet_enchantments.cfg
 .minecraft/config/buildcraft/detailed.properties
+.minecraft/config/astralsorcery/amulet_enchantments.cfg
+instance.cfg
+.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
+.minecraft/config/splash.properties
+.minecraft/config/thaumicjei_itemstack_aspects.json
+.minecraft/config/UniqueNames.txt
