--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -24,7 +24,7 @@ world-78688046 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@deepmo
+    S:filterText=potion
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
