--- a/.minecraft/hei_bookmarks.ini
+++ b/.minecraft/hei_bookmarks.ini
@@ -43,3 +43,7 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galaxyspace:assembly_mach
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"railcraft:track_outfitted",Count:1,tag:{railcraft:{rail:"railcraft_iron",kit:"railcraft_locking"}},Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{AS_Amulet_HolderLeast:-7856832193709446652L,AS_Amulet_HolderMost:5100163605150778045L}},id:"techguns:pulserifle",Count:1,tag:{ammo:12s,ammovariant:"default",camo:0b},Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"minecraft:potion",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"harvestcraft:watertrap",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"mod_lavacow:piranha",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"mod_lavacow:cheirolepis",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"mod_lavacow:zombiepiranha_item",Count:1,Damage:0s}
