Mo' Drops & Quests
Paritied drops for ducks and turkeys

Added text for different early quests

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ instance.cfg
 .minecraft/config/splash.properties
 .minecraft/config/thaumicjei_itemstack_aspects.json
 .minecraft/config/UniqueNames.txt
+.minecraft/config/UniqueNames.txt
+.minecraft/config/UniqueNames.txt
+instance.cfg
