Textures, Medicine, & Other Stuff
Alex removed natural generation of SRP Medicine plants (could still exist in fringe situations but I might not)

Added Resource packs for Pigs, Chickens, Rabbits, and Cows

Added 2 mods for music discs

Added Mod that adds a microblocks tab for JEI

Added Cold Iron Spartan weapons

Added infected creepers

Added fireproof enchant

--- a/.minecraft/config/quark.cfg
+++ b/.minecraft/config/quark.cfg
@@ -1235,7 +1235,7 @@ tweaks {
     B:"Jump boost allows to step up 1 block"=true
     B:"Knock on doors"=true
     B:"Look down on ladders to descend fast"=true
-    B:"Pat the dogs"=true
+    B:"Pat the dogs"=false
     B:"Quick armor swapping"=true
     B:"Remove layers of snow by right clicking with a shovel"=true
     B:"Right click harvest"=true
