--- a/instance.cfg
+++ b/instance.cfg
@@ -3,9 +3,9 @@ ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
 JavaArchitecture=64
-JavaPath=C:/Program Files/Java/jre-1.8/bin/javaw.exe
-JavaTimestamp=1710330346000
-JavaVersion=1.8.0_411
+JavaPath=C:/Program Files/Java/jre1.8.0_431/bin/javaw.exe
+JavaTimestamp=1727703116000
+JavaVersion=1.8.0_431
 JoinServerOnLaunch=true
 JoinServerOnLaunchAddress=
 JoinSingleplayerWorldOnLaunch=false
@@ -13,7 +13,7 @@ JoinSingleplayerWorldOnLaunchName=
 JoinWorldOnLaunch=false
 JvmArgs=
 LWJGLVersion=
-LaunchMaximized=false
+LaunchMaximized=true
 LiteloaderVersion=
 LogPrePostOutput=true
 MCLaunchMethod=LauncherPart
@@ -34,9 +34,9 @@ OverrideJava=false
 OverrideJavaArgs=false
 OverrideJavaLocation=true
 OverrideMCLaunchMethod=false
-OverrideMemory=false
+OverrideMemory=true
 OverrideNativeWorkarounds=false
-OverrideWindow=false
+OverrideWindow=true
 PermGen=128
 PostExitCommand=
 PreLaunchCommand=
@@ -48,8 +48,8 @@ UseNativeGLFW=false
 UseNativeOpenAL=false
 WrapperCommand=
 iconKey=chicken
-lastLaunchTime=1732415980637
-lastTimePlayed=659
+lastLaunchTime=1734678512050
+lastTimePlayed=2086
 name=TobyTech
 notes=
-totalTimePlayed=2091727
+totalTimePlayed=2145650
