--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -24,7 +24,7 @@ world-78688046 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=hang
+    S:filterText=moon
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -146,12 +146,22 @@ world1855637915 {
 }
 
 
+world1855637982 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=carac
+    B:overlayEnabled=true
+}
+
+
 world1945624744 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     S:defaultFluidContainerItem=
     B:editEnabled=false
-    S:filterText=@poll
+    S:filterText=@med
     B:overlayEnabled=true
 }
 
