--- a/.minecraft/config/notenoughpets.cfg
+++ b/.minecraft/config/notenoughpets.cfg
@@ -11,7 +11,7 @@
     B:"Enable NEC version: Cat"=true
 
     # If false, wolves/dogs will revert to their vanilla counterparts, removing many NEC features. Do this if you experience inter-mod compatibility issues. [default: true]
-    B:"Enable NEC version: Dog"=true
+    B:"Enable NEC version: Dog"=false
 
     # If false, mooshrooms will revert to their vanilla counterparts, removing many NEC features. Do this if you experience inter-mod compatibility issues. [default: true]
     B:"Enable NEC version: Mooshroom"=true
@@ -20,13 +20,13 @@
     B:"Enable NEP version: Parrot"=true
 
     # If true, wild-spawning wolves (skin type 0) remain or become vanilla when tamed [default: false]
-    B:"Tamed Wolves Remain Vanilla"=false
+    B:"Tamed Wolves Remain Vanilla"=true
 
     # If true, wild-spawning ocelots (skin type 0) will remain vanilla until tamed [default: false]
     B:"Untamed Ocelots Remain Vanilla"=false
 
     # If true, wild-spawning wolves (skin type 0) will remain vanilla until tamed [default: false]
-    B:"Untamed Wolves Remain Vanilla"=false
+    B:"Untamed Wolves Remain Vanilla"=true
 }
 
 
@@ -171,7 +171,7 @@ general {
     I:"Village spawn cap: Cat"=10
 
     # Maximum number of stray dogs that can spawn in a village depends on the village's size, but will never be bigger than this value. [range: 0 ~ 100, default: 10]
-    I:"Village spawn cap: Dog"=10
+    I:"Village spawn cap: Dog"=0
 
     # This fraction of village strays are cats. The rest are dogs. [range: 0.0 ~ 1.0, default: 0.75]
     S:"Village spawn cat fraction"=0.75
