GLASS, Chicken Chunks, & Removed Comets
Added GLASS, and Chicken Chunks as well as quest for GLASS

Removed Draconium Comets in the End

--- a/instance.cfg
+++ b/instance.cfg
@@ -2,7 +2,7 @@ AutoCloseConsole=false
 ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
-JavaArchitecture=64
+JavaArchitecture=amd64
 JavaPath=C:/Program Files/Java/jre1.8.0_431/bin/javaw.exe
 JavaTimestamp=1727703116000
 JavaVersion=1.8.0_431
@@ -48,8 +48,8 @@ UseNativeGLFW=false
 UseNativeOpenAL=false
 WrapperCommand=
 iconKey=chicken
-lastLaunchTime=1734678512050
-lastTimePlayed=2086
+lastLaunchTime=1735620623404
+lastTimePlayed=6639
 name=TobyTech
 notes=
-totalTimePlayed=2145650
+totalTimePlayed=2159901
