Parasite Fix & Netherex Axed
Made it so the scripts added last PR actually work

Removed NetherEx as it does too great an overhaul of the Nether and makes the intended progression more difficult.

--- a/.minecraft/hei_bookmarks.ini
+++ b/.minecraft/hei_bookmarks.ini
@@ -26,8 +26,6 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconi
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_legs",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_chest",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_boots",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{}},id:"galacticraftplanets:bucket_sludge",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galacticraftplanets:cavern_vines",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"techguns:itemshared",Count:1,Damage:84s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"enderio:item_alloy_ingot",Count:1,Damage:6s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"railcraft:ingot",Count:1,Damage:9s}
@@ -43,8 +41,4 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galaxyspace:assembly_mach
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"railcraft:track_outfitted",Count:1,tag:{railcraft:{rail:"railcraft_iron",kit:"railcraft_locking"}},Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{AS_Amulet_HolderLeast:-7856832193709446652L,AS_Amulet_HolderMost:5100163605150778045L}},id:"techguns:pulserifle",Count:1,tag:{ammo:12s,ammovariant:"default",camo:0b},Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"minecraft:potion",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"srp_medical_addon:mint",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"srp_medical_addon:aconite_root",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galacticraftplanets:strange_seed",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galacticraftplanets:strange_seed",Count:1,Damage:1s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"nuclearcraft:crystallizer_idle",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"sereneseasons:season_clock",Count:1,Damage:0s}
